fix(navbar): fix assets display when navbar is collapsed

--- a/static/assets/css/user.css
+++ b/static/assets/css/user.css
@@ -1,2 +1,7 @@
 /* prettier-ignore */
 /*# sourceMappingURL=user.css.map */
+
+/* Align dropdown-indicator icon with simple nav items in collapsed mode */
+.navbar-vertical-collapsed .navbar-vertical[class*="navbar-expand-"] .nav-link.dropdown-indicator.label-1 {
+  padding-left: 1.5rem;
+}
